panschema/src/snapshots/panschema__components__tests__snapshots__snapshot_class_card_minimal.snap
---
source: panschema/src/components.rs
assertion_line: 1118
expression: html
---
<article class="entity-card class-card" id="class-thing">
    <header class="entity-header">
        <div class="entity-badge class-badge">Class</div>
        <h3 class="entity-title">Thing</h3>
        <button class="copy-btn" data-copy="https://example.org/ontology#Thing" title="Copy IRI">
            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
            </svg>
        </button>
    </header>

    <div class="entity-iri">
        <code class="mono">https://example.org/ontology#Thing</code>
    </div>

    <div class="entity-details">
    </div>
</article>
<style>
    .entity-card {
        background-color: var(--color-bg);
        border: 1px solid var(--color-border);
        border-radius: var(--radius-lg);
        padding: var(--space-6);
        margin-bottom: var(--space-6);
        transition: box-shadow var(--transition-fast);
    }

    .entity-card:hover {
        box-shadow: var(--shadow-md);
    }

    .entity-card:target {
        box-shadow: 0 0 0 2px var(--color-primary);
    }

    .entity-header {
        display: flex;
        align-items: center;
        gap: var(--space-3);
        margin-bottom: var(--space-2);
    }

    .entity-badge {
        display: inline-flex;
        align-items: center;
        padding: var(--space-1) var(--space-2);
        font-size: var(--text-xs);
        font-weight: 600;
        text-transform: uppercase;
        letter-spacing: 0.05em;
        border-radius: var(--radius-sm);
    }

    .class-badge {
        background-color: color-mix(in srgb, var(--color-class) 15%, transparent);
        color: var(--color-class);
    }

    .entity-title {
        flex: 1;
        margin: 0;
        font-size: var(--text-lg);
        font-weight: 600;
        color: var(--color-text);
    }

    .entity-header .copy-btn {
        display: inline-flex;
        align-items: center;
        justify-content: center;
        padding: var(--space-2);
        background: none;
        border: none;
        color: var(--color-text-muted);
        cursor: pointer;
        border-radius: var(--radius-sm);
        opacity: 0;
        transition: opacity var(--transition-fast), color var(--transition-fast);
    }

    .entity-card:hover .copy-btn {
        opacity: 1;
    }

    .entity-header .copy-btn:hover {
        color: var(--color-primary);
        background-color: var(--color-bg-tertiary);
    }

    .entity-header .copy-btn.copied {
        color: var(--color-property);
    }

    /* Subtle "abstract" badge next to the class title — uppercase
       to read as a category tag, muted color so it doesn't compete
       with the title itself. */
    .abstract-badge {
        margin-left: var(--space-2);
        padding: 2px var(--space-2);
        font-size: var(--text-xs);
        font-weight: 500;
        text-transform: uppercase;
        letter-spacing: 0.05em;
        color: var(--color-text-muted);
        background-color: var(--color-bg-tertiary);
        border-radius: var(--radius-sm);
        vertical-align: middle;
    }

    /* "Deprecated" badge next to the card title — a warning accent so a
       sunset element reads as sunset at a glance, distinct from the muted
       "abstract" tag. */
    .deprecated-badge {
        margin-left: var(--space-2);
        padding: 2px var(--space-2);
        font-size: var(--text-xs);
        font-weight: 600;
        text-transform: uppercase;
        letter-spacing: 0.05em;
        color: var(--color-warning, #b45309);
        background-color: color-mix(in srgb, var(--color-warning, #b45309) 15%, transparent);
        border-radius: var(--radius-sm);
        vertical-align: middle;
    }

    /* The deprecation note: the migration guidance shown under the
       description so readers see what to use instead. */
    .deprecated-note {
        margin: 0 0 var(--space-4) 0;
        padding: var(--space-2) var(--space-3);
        font-size: var(--text-sm);
        color: var(--color-text);
        background-color: color-mix(in srgb, var(--color-warning, #b45309) 8%, transparent);
        border-left: 3px solid var(--color-warning, #b45309);
        border-radius: var(--radius-sm);
    }

    .entity-iri {
        margin-bottom: var(--space-4);
    }

    .entity-iri code {
        color: var(--color-text-muted);
        font-size: var(--text-sm);
        word-break: break-all;
    }

    /* CURIE-expanded class_uri / slot_uri rendered as an anchor.
       Inherits muted color from the inner <code>; underline only on
       hover so the card stays visually quiet at rest. */
    .entity-iri-link {
        text-decoration: none;
    }
    .entity-iri-link:hover code {
        text-decoration: underline;
        color: var(--color-text);
    }

    .entity-description {
        margin: 0 0 var(--space-4) 0;
        color: var(--color-text);
        line-height: 1.7;
    }

    .entity-details {
        display: grid;
        gap: var(--space-3);
        padding-top: var(--space-4);
        border-top: 1px solid var(--color-border);
    }

    .detail-row {
        display: grid;
        grid-template-columns: 120px 1fr;
        gap: var(--space-3);
        font-size: var(--text-sm);
    }

    .detail-row dt {
        font-weight: 500;
        color: var(--color-text-muted);
    }

    .detail-row dd {
        margin: 0;
    }

    .entity-ref {
        display: inline-flex;
        align-items: center;
        padding: var(--space-1) var(--space-2);
        background-color: var(--color-bg-secondary);
        border-radius: var(--radius-sm);
        font-size: var(--text-sm);
        transition: background-color var(--transition-fast);
    }

    .entity-ref:hover {
        text-decoration: none;
    }

    .class-ref {
        color: var(--color-class);
    }

    .class-ref:hover {
        background-color: color-mix(in srgb, var(--color-class) 10%, transparent);
    }

    .slot-ref {
        color: var(--color-property);
    }

    .slot-ref:hover {
        background-color: color-mix(in srgb, var(--color-property) 10%, transparent);
    }

    .datatype-ref {
        color: var(--color-text-muted);
        font-family: monospace;
    }

    .slot-list {
        list-style: none;
        padding: 0;
        margin: 0;
    }

    .slot-entry {
        display: flex;
        flex-wrap: wrap;
        align-items: baseline;
        /* Tight within a slot (name, range, flags, description hug
           together) so each slot reads as one group. */
        gap: var(--space-1) var(--space-2);
    }

    /* Separate consecutive slots with extra space and a subtle divider,
       so it's clear which description belongs to which slot. */
    .slot-entry + .slot-entry {
        margin-top: var(--space-3);
        padding-top: var(--space-3);
        border-top: 1px solid color-mix(in srgb, var(--color-border) 60%, transparent);
    }

    .slot-name {
        font-family: monospace;
        color: var(--color-property);
        font-weight: 500;
    }

    .slot-flag {
        font-size: var(--text-xs);
        padding: 0 var(--space-2);
        border-radius: var(--radius-sm);
        text-transform: uppercase;
        letter-spacing: 0.05em;
    }

    .slot-flag.required {
        background-color: color-mix(in srgb, var(--color-class) 15%, transparent);
        color: var(--color-class);
    }

    .slot-flag.multivalued {
        background-color: color-mix(in srgb, var(--color-property) 15%, transparent);
        color: var(--color-property);
    }

    .slot-flag.refined {
        background-color: color-mix(in srgb, var(--color-text-muted) 15%, transparent);
        color: var(--color-text-muted);
        font-style: italic;
    }

    .slot-flag.origin {
        background-color: transparent;
        border: 1px solid var(--color-border);
        color: var(--color-text-muted);
    }

    .slot-suppressed {
        color: var(--color-text-muted);
        font-style: italic;
    }

    .slot-description {
        flex-basis: 100%;
        margin: var(--space-1) 0 0 0;
        font-size: var(--text-sm);
        color: var(--color-text-muted);
    }

    .rule-list {
        list-style: none;
        padding: 0;
        margin: 0;
    }

    .rule-entry + .rule-entry {
        margin-top: var(--space-3);
        padding-top: var(--space-3);
        border-top: 1px solid color-mix(in srgb, var(--color-border) 60%, transparent);
    }

    .rule-title {
        font-weight: 500;
    }

    .rule-description,
    .rule-summary {
        margin-top: var(--space-1);
        font-size: var(--text-sm);
        color: var(--color-text-muted);
    }

    .rule-summary code,
    .rule-description code {
        font-size: var(--text-sm);
        color: var(--color-text);
    }

    .unique-key-list {
        list-style: none;
        padding: 0;
        margin: 0;
    }

    .unique-key-entry + .unique-key-entry {
        margin-top: var(--space-3);
        padding-top: var(--space-3);
        border-top: 1px solid color-mix(in srgb, var(--color-border) 60%, transparent);
    }

    .unique-key-description {
        margin-top: var(--space-1);
        font-size: var(--text-sm);
        color: var(--color-text-muted);
    }

    @media (max-width: 640px) {
        .entity-card {
            padding: var(--space-4);
        }

        .detail-row {
            grid-template-columns: 1fr;
            gap: var(--space-1);
        }

        .entity-header .copy-btn {
            opacity: 1;
        }
    }
</style>
