panschema/src/snapshots/panschema__components__tests__snapshots__snapshot_footer.snap
---
source: src/components.rs
expression: html
---
<footer class="site-footer">
    <div class="container">
        <p class="footer-text">
            Generated by <a href="https://github.com/padamson/panschema">panschema</a>
        </p>
    </div>
</footer>
<style>
    .site-footer {
        margin-top: 3rem;
        padding: 2rem 0;
        border-top: 1px solid var(--color-border);
        background-color: var(--color-bg-secondary);
    }

    .footer-text {
        margin: 0;
        font-size: 0.875rem;
        color: var(--color-text-muted);
        text-align: center;
    }
</style>
