panschema/src/snapshots/panschema__components__tests__snapshots__snapshot_hero_with_comment.snap
---
source: panschema/src/components.rs
expression: html
---
<section class="hero">
    <h1 class="hero-title">Test Ontology</h1>
    <div class="hero-description">A test ontology description.</div>
</section>
<style>
    .hero {
        padding: 3rem 0 2rem;
        text-align: center;
    }

    .hero-title {
        margin: 0 0 0.5rem 0;
        font-size: 2.5rem;
        font-weight: 700;
        color: var(--color-text);
    }

    .hero-description {
        margin: 0;
        font-size: 1.125rem;
        color: var(--color-text-muted);
        max-width: 600px;
        margin-left: auto;
        margin-right: auto;
    }

    @media (max-width: 640px) {
        .hero-title {
            font-size: 1.75rem;
        }

        .hero-description {
            font-size: 1rem;
        }
    }
</style>
